--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 .DS_Store
+.pnp.*
+.yarn/*
 *.local
 /build
 /node_modules
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
