--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "homepage": "./",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -r docs/* && cp -r build/* docs",
     "dev": "react-scripts start",
-    "docs": "rm -r docs/* && cp -r build/* docs",
     "push": "git add -A && git commit -m 'update' && git push && git status"
   },
   "dependencies": {
@@ -16,11 +15,6 @@
     "efrt": "^2.2.2",
     "react-scripts": "4.0.1",
     "word-list": "^3.1.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   },
   "browserslist": {
     "production": [
