--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "efrt": "^2.2.2",
+    "efrt": "2.2.2",
     "react-scripts": "4.0.1",
     "word-list": "^3.1.0"
   },
